--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,22 @@
-/*  your css code here. If applicable */
 body {
-  font-family: Arial, sans-serif;
+    font-family: Arial, sans-serif;
 }
 
 #buttons {
-  display: flex;
-  justify-content: center;
-  margin-top: 50px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 20px;
 }
 
 .btn {
-  /* padding: 10px 20px; */
-  margin: 0 10px;
-  font-size: 16px;
-  cursor: pointer;
+    padding: 10px 10px;
+    margin: 10px;
+    font-size: 16px;
+    cursor: pointer;
 }
 
-/* .stop {
-  background-color: red;
-  color: white;
-} */
+/* .stop { */
+    background-color: red;
+    color: white;
+}
